Fixed srolling issue on mobile

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -115,7 +115,7 @@
       margin-bottom: 4rem;
     }
 
-    padding: 4.5rem 1.5rem;
+    padding: 1.5rem;
   }
 
   main#home h1 {
