--- a/scss/main.scss
+++ b/scss/main.scss
@@ -107,6 +107,9 @@ main {
 .contact-info {
   @include easeOut;
 
+    margin-top: 4rem;
+
+    height: 100%;
   display: block;
 
   .contact-info-button {
@@ -131,8 +134,6 @@ main {
     justify-content: center;
     
     padding: 0rem 1rem;
-
-    margin-top: 4rem;
 
     h2 {
       @include easeOut;
